--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -3,15 +3,155 @@
   <title>Change Password</title>
   <link rel="stylesheet" href="projectStyle.css" />
   <style>
+    :root {
+      --concordia-burgundy: #5e001f;
+      --concordia-burgundy-dark: #440017;
+      --concordia-gold: #c9a646;
+      --bg-page: #f5f5f5;
+      --text-main: #222;
+      --text-dim: #6b6b6b;
+      --card-bg: #fff;
+      --card-border: #ddd;
+    }
+
+    /* page base */
+    body {
+      background-color: var(--bg-page);
+      color: var(--text-main);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial, sans-serif;
+      margin: 0;
+      padding: 32px 16px 64px;
+      line-height: 1.4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    /* Concordia header bar */
+    .site-header {
+      background-color: var(--concordia-burgundy);
+      color: #fff;
+      border-bottom: 4px solid var(--concordia-gold);
+      padding: 12px 24px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 12px;
+      width: 100%;
+      box-sizing: border-box;
+      margin: -32px 0 24px 0;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    }
+
+    .site-header img {
+      height: 48px;
+      width: auto;
+    }
+
+    /* page title */
     h1 {
       text-align: center;
+      color: var(--concordia-burgundy);
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin: 0 0 24px 0;
     }
-    body {
-      background-color: #c4a0a7;
-    }
+
+    /* outer label becomes the centered card */
     label {
       display: block;
-      text-align: center;
+      background-color: var(--card-bg);
+      border: 1px solid var(--card-border);
+      border-radius: 12px;
+      box-shadow: 0 24px 48px rgba(0, 0, 0, 0.07);
+      width: 100%;
+      max-width: 420px;
+      padding: 20px 24px;
+      color: var(--text-main);
+      font-size: 0.95rem;
+      font-weight: 600;
+      line-height: 1.4;
+      margin: 0 auto 16px auto;
+      text-align: left;
+    }
+
+    /* the nested label contains input + button. We'll align those with flex */
+    label > label {
+      display: flex !important;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 12px;
+      font-weight: 400;
+      margin-top: 12px;
+      padding: 0;
+      background: transparent;
+      border: 0;
+      box-shadow: none;
+      width: 100%;
+      max-width: 100%;
+    }
+
+    /* email input field */
+    input[type="text"] {
+      flex: 1 1 220px;
+      min-width: 0;
+      padding: 10px 12px;
+      font-size: 0.95rem;
+      color: var(--text-main);
+      background-color: #fff;
+      border: 1px solid #bbb;
+      border-radius: 6px;
+      line-height: 1.4;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+      transition: all 0.15s ease;
+      font-family: inherit;
+    }
+
+    input[type="text"]::placeholder {
+      color: #999;
+    }
+
+    input[type="text"]:focus {
+      outline: none;
+      border-color: var(--concordia-burgundy);
+      box-shadow: 0 0 0 3px rgba(94,0,31,0.2);
+    }
+
+    /* submit button */
+    .secondaryButton {
+      flex: 0 0 auto;
+      background-color: #fff;
+      color: var(--concordia-burgundy);
+      border: 2px solid var(--concordia-burgundy);
+      border-radius: 6px;
+      font-size: 0.9rem;
+      font-weight: 600;
+      line-height: 1.2;
+      padding: 10px 14px;
+      cursor: pointer;
+      transition: all 0.18s ease;
+      box-shadow: 0 8px 16px rgba(94, 0, 31, 0.25);
+      white-space: nowrap;
+    }
+
+    .secondaryButton:hover {
+      background-color: var(--concordia-burgundy);
+      color: #fff;
+      box-shadow: 0 12px 24px rgba(94, 0, 31, 0.4);
+    }
+
+    /* on very narrow screens, stack input and button full width */
+    @media (max-width: 400px) {
+      label > label {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      .secondaryButton {
+        width: 100%;
+        text-align: center;
+      }
     }
   </style>
   <body>
@@ -19,6 +159,7 @@
       <img src="concordiaEmblem.png" alt ="Concordia Emblem">
     </header>
     <h1>Reset Your Password</h1>
+
     <label>
       Enter your email to reset password:
       <label style="display: inline">
@@ -26,6 +167,7 @@
         <button id="submit" class="secondaryButton" type="button">Submit</button>
       </label>
     </label>
+
     <script>
       document.getElementById("submit").addEventListener("click", function () {
         alert("Email has been sent!");
