--- a/managingAccountStudent.html
+++ b/managingAccountStudent.html
@@ -4,43 +4,156 @@
     <meta charset="UTF-8" />
     <title>Account Management Page</title>
     <link rel="stylesheet" href="projectStyle.css" />
+    <style>
+      /* === Concordia Header === */
+      .site-header {
+        background-color: #5e001f; /* Burgundy */
+        color: #fff;
+        border-bottom: 4px solid #c9a646; /* Gold accent */
+        padding: 12px 24px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 12px;
+        margin: -8px -8px 24px -8px;
+      }
+
+      .site-header img {
+        height: 48px;
+        width: auto;
+      }
+
+      body {
+        background-color: #f5f5f5;
+        color: #222;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, "Helvetica Neue", Arial, sans-serif;
+        margin: 0;
+        padding: 32px;
+        line-height: 1.4;
+      }
+
+      h1 {
+        color: #5e001f;
+        font-size: 1.6rem;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 24px;
+      }
+
+      h2 {
+        color: #333;
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-top: 40px;
+        text-align: center;
+      }
+
+      /* === Buttons === */
+      .largeButton {
+        display: block;
+        margin: 10px auto;
+        background-color: #fff;
+        color: #5e001f;
+        border: 2px solid #5e001f;
+        border-radius: 6px;
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 14px 28px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        width: 250px;
+        text-align: center;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .largeButton:hover {
+        background-color: #5e001f;
+        color: #fff;
+        box-shadow: 0 6px 12px rgba(94, 0, 31, 0.3);
+      }
+
+      /* === Upcoming Appointments === */
+      label {
+        display: block;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 12px 16px;
+        margin: 12px auto;
+        max-width: 700px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+        font-size: 0.95rem;
+      }
+
+      /* === Buttons inside appointments === */
+      .reschedule,
+      .cancel {
+        margin-left: 8px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        padding: 6px 12px;
+        border-radius: 4px;
+        border: 1px solid #5e001f;
+        cursor: pointer;
+        transition: all 0.15s ease;
+      }
+
+      .reschedule {
+        background-color: #fff;
+        color: #5e001f;
+      }
+
+      .reschedule:hover {
+        background-color: #5e001f;
+        color: #fff;
+        box-shadow: 0 3px 8px rgba(94, 0, 31, 0.3);
+      }
+
+      .cancel {
+        background-color: #5e001f;
+        color: #fff;
+        border: 1px solid #5e001f;
+      }
+
+      .cancel:hover {
+        background-color: #7a0b2b;
+        box-shadow: 0 3px 8px rgba(94, 0, 31, 0.3);
+      }
+
+      .center-button {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 150px;
+        height: 100px;
+      }
+    </style>
   </head>
-  <style>
-    .center-button {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 150px;
-      height: 100px;
-    }
-    label {
-      text-align: center;
-      display: block;
-    }
-  </style>
+
   <body>
     <header class="site-header">
-      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+      <img src="concordiaEmblem.png" alt="Concordia Emblem">
+      <h2>Concordia University — Account Management</h2>
     </header>
+
     <h1>
       Welcome, <span id="displayName"></span> please choose which option pertains to you.
     </h1>
+
     <button id="changePassword" class="largeButton" type="button">
       Reset Password
     </button>
-    <br />
     <button id="changeUsername" class="largeButton" type="button">
       Reset Username
     </button>
-    <br />
     <button id="specialRequest" class="largeButton" type="button">
       Special Booking Requests
     </button>
-    <br />
     <button id="pastAppointments" class="largeButton" type="button">
       Past Appointments
     </button>
-    <br />
+
     <h2>Upcoming Appointments:</h2>
 
     <label>
@@ -70,9 +183,9 @@
     </label>
 
     <script>
-      //still have to fix this it isnt working
       const username = localStorage.getItem("username");
       document.getElementById("displayName").textContent = username;
+
       document
         .getElementById("changePassword")
         .addEventListener("click", function () {
@@ -93,14 +206,17 @@
         .addEventListener("click", function () {
           location.href = "pastAppointments.html";
         });
+
       const rescheduleBtn = document.querySelectorAll(".reschedule");
       const cancelBtn = document.querySelectorAll(".cancel");
+
       for (let i = 0; i < rescheduleBtn.length; i++) {
         rescheduleBtn[i].addEventListener("click", function () {
           location.href = "studentPage.html";
           this.parentElement.remove();
         });
       }
+
       for (let j = 0; j < cancelBtn.length; j++) {
         cancelBtn[j].addEventListener("click", function () {
           alert("Appointment has been canceled!");
